UF-8534: Update API to handle internal/external
