# src/integration-test/resources/api/openapi.yaml
@@ -5,7 +5,7 @@ info:
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "3.0"
+  version: "4.0"
 servers:
   - url: http://localhost:50331
     description: Generated server url
@@ -13,7 +13,7 @@ tags:
   - name: messages
     description: Messages
 paths:
-  /messages:
+  /messages/{familyId}/{Instance}:
     get:
       tags:
         - messages
@@ -21,13 +21,20 @@ paths:
       description: Returns a list of messages found for the specified familyId
       operationId: getMessages
       parameters:
-        - name: familyid
-          in: query
+        - name: familyId
+          in: path
           description: FamilyId to fetch messages for
           required: true
           schema:
             type: string
           example: 123
+        - name: Instance
+          in: path
+          description: Instance to fetch messages for
+          required: true
+          schema:
+            type: string
+          example: INTERNAL
       responses:
         "400":
           description: Bad request
@@ -35,20 +42,14 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                  - $ref: '#/components/schemas/Problem'
-                  - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "404":
-          description: Not found
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server error
           content:
             application/problem+json:
               schema:
-                $ref: '#/components/schemas/Problem'
+                $ref: "#/components/schemas/Problem"
         "200":
           description: Successful Operation
           content:
@@ -56,45 +57,13 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/MessageDTO'
-    delete:
-      tags:
-        - messages
-      summary: Delete a list of messages
-      description: Deletes a list of messages with the ids provided
-      operationId: deleteMessages
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                type: integer
-                format: int32
-        required: true
-      responses:
-        "400":
-          description: Bad request
-          content:
-            application/problem+json:
-              schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Problem'
-                  - $ref: '#/components/schemas/ConstraintViolationProblem'
+                  $ref: "#/components/schemas/MessageDTO"
         "404":
           description: Not found
           content:
             application/problem+json:
               schema:
-                $ref: '#/components/schemas/Problem'
-        "500":
-          description: Internal Server error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
-        "204":
-          description: No Content
+                $ref: "#/components/schemas/Problem"
   /messages/attachments/{attachmentId}:
     get:
       tags:
@@ -118,22 +87,22 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                  - $ref: '#/components/schemas/Problem'
-                  - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "404":
-          description: Not found
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server error
           content:
             application/problem+json:
               schema:
-                $ref: '#/components/schemas/Problem'
+                $ref: "#/components/schemas/Problem"
         "200":
           description: Successful Operation
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
     delete:
       tags:
         - messages
@@ -156,22 +125,22 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                  - $ref: '#/components/schemas/Problem'
-                  - $ref: '#/components/schemas/ConstraintViolationProblem'
-        "404":
-          description: Not found
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server error
           content:
             application/problem+json:
               schema:
-                $ref: '#/components/schemas/Problem'
+                $ref: "#/components/schemas/Problem"
         "204":
           description: No Content
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
   /api-docs:
     get:
       tags:
@@ -188,6 +157,45 @@ paths:
       x-auth-type: None
       x-throttling-tier: Unlimited
       x-wso2-mutual-ssl: Optional
+  /messages:
+    delete:
+      tags:
+        - messages
+      summary: Delete a list of messages
+      description: Deletes a list of messages with the ids provided
+      operationId: deleteMessages
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: integer
+                format: int32
+        required: true
+      responses:
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: "#/components/schemas/Problem"
+                  - $ref: "#/components/schemas/ConstraintViolationProblem"
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "204":
+          description: No Content
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
 components:
   schemas:
     Problem:
@@ -208,7 +216,7 @@ components:
         detail:
           type: string
         status:
-          $ref: '#/components/schemas/StatusType'
+          $ref: "#/components/schemas/StatusType"
     StatusType:
       type: object
       properties:
@@ -221,7 +229,7 @@ components:
       type: object
       properties:
         cause:
-          $ref: '#/components/schemas/ThrowableProblem'
+          $ref: "#/components/schemas/ThrowableProblem"
         stackTrace:
           type: array
           items:
@@ -248,11 +256,11 @@ components:
           type: string
           format: uri
         status:
-          $ref: '#/components/schemas/StatusType'
+          $ref: "#/components/schemas/StatusType"
         violations:
           type: array
           items:
-            $ref: '#/components/schemas/Violation'
+            $ref: "#/components/schemas/Violation"
         title:
           type: string
         message:
@@ -303,7 +311,7 @@ components:
       type: object
       properties:
         cause:
-          $ref: '#/components/schemas/ThrowableProblem'
+          $ref: "#/components/schemas/ThrowableProblem"
         stackTrace:
           type: array
           items:
@@ -343,7 +351,7 @@ components:
         detail:
           type: string
         status:
-          $ref: '#/components/schemas/StatusType'
+          $ref: "#/components/schemas/StatusType"
         suppressed:
           type: array
           items:
@@ -452,7 +460,7 @@ components:
           example: Test
         lastName:
           type: string
-          description: 'If the message was utbound from a manager or inbound from
+          description: 'If the message was outbound from a manager or inbound from
             a customer '
           example: Testorsson
         email:
@@ -461,11 +469,15 @@ components:
           example: test@sundsvall.se
         userId:
           type: string
-          description: 'If the message was utbound from a manager or inbound from
+          description: 'If the message was outbound from a manager or inbound from
             a customer '
           example: "177"
         attachments:
           type: array
           items:
-            $ref: '#/components/schemas/MessageAttachment'
+            $ref: "#/components/schemas/MessageAttachment"
+        instance:
+          type: string
+          description: The instance of the message
+          example: external
   securitySchemes: { }
