# src/main/java/se/sundsvall/webmessagecollector/api/model/MessageDTO.java
@@ -43,16 +43,19 @@ public class MessageDTO {
 	@Schema(description = "Firstname of the poster ", example = "Test")
 	private final String firstName;
 
-	@Schema(description = "If the message was utbound from a manager or inbound from a customer ", example = "Testorsson")
+	@Schema(description = "If the message was outbound from a manager or inbound from a customer ", example = "Testorsson")
 	private final String lastName;
 
 	@Schema(description = "Email for the poster", example = "test@sundsvall.se")
 	private final String email;
 
-	@Schema(description = "If the message was utbound from a manager or inbound from a customer ", example = "177")
+	@Schema(description = "If the message was outbound from a manager or inbound from a customer ", example = "177")
 	private final String userId;
 
 	@ArraySchema(schema = @Schema(description = "List of attachments for the message", example = "attachment1, attachment2"))
 	private final List<MessageAttachment> attachments;
+
+	@Schema(description = "The instance of the message", example = "external")
+	private final String instance;
 
 }
