# src/main/java/se/sundsvall/webmessagecollector/integration/db/model/ExecutionInformationEntity.java
@@ -2,13 +2,14 @@ package se.sundsvall.webmessagecollector.integration.db.model;
 
 import java.time.OffsetDateTime;
 
-import org.hibernate.annotations.TimeZoneStorage;
-import org.hibernate.annotations.TimeZoneStorageType;
-
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
+
+import org.hibernate.annotations.TimeZoneStorage;
+import org.hibernate.annotations.TimeZoneStorageType;
+
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -22,12 +23,13 @@ import lombok.NoArgsConstructor;
 @AllArgsConstructor
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 public class ExecutionInformationEntity {
-    
+
 	@Id
 	@Column(name = "family_id", unique = true)
-    private String familyId;
+	private String familyId;
 
 	@Column(name = "last_successful_execution")
 	@TimeZoneStorage(TimeZoneStorageType.NORMALIZE)
 	private OffsetDateTime lastSuccessfulExecution;
+
 }
